Navbar overlap solved
Navbar had a fixed height of 50px.
This was preventing the div below to be separated.

--- a/style.css
+++ b/style.css
@@ -90,15 +90,14 @@ li{
   font-size: 20px;
   color: red;
   font-weight: bolder;
-  height: 30px;
-  padding-bottom: 2em;
+  /*padding-bottom: 2em;*/
   /*position: fixed;*/
 }
 
 .navbarback{
   background: url("image/checkeredflag.jpg");
   width: 100%;
-  height: 100%;
+  height: 50px;
   background-size: contain;
 }
 
